--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "type": "commonjs",
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "npx ts-node src/index.ts",
+    "dev": "nodemon --legacy-watch --watch ./src --ext ts --exec 'node --inspect=0.0.0.0:9229 --nolazy --loader ts-node/esm' ./src/index.ts",
     "watch": "npx ts-node-dev src/index.ts",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -35,7 +35,7 @@
     "url": ""
   },
   "keywords": [],
-  "Author": "",
+  "author": "",
   "license": "",
   "engines": {
     "node": ">=22.12.0"
